<resources>
    <string name="app_name">Final Project</string>
    <string name="pic_url_text">Picture URL:</string>
    <string name="pic_date_text">Picture Date:</string>
    <string name="HD_url_text">HD URL:</string>
    <string name="select_date">Submit Date</string>
    <string name="save_pic">Save Picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>