<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/space_pic"/>

    <ImageView
        android:id="@+id/space_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"/>

    <TextView
        android:id="@+id/pic_url_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:text="@string/pic_url_text"
        android:layout_marginEnd="5dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/pic_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/progressBar"
        android:layout_toRightOf="@id/pic_url_text"
        android:textSize="10sp"
        />

    <TextView
        android:id="@+id/pic_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pic_url_text"
        android:layout_marginEnd="5dp"
        android:text="@string/pic_date_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/pic_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/pic_url_text"
        android:layout_toRightOf="@id/pic_date_text"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/HD_url_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HD_url_text"
        android:layout_below="@id/pic_date_text"
        android:layout_marginEnd="5dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/HD_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:layout_below="@id/pic_date"
        android:layout_toRightOf="@id/HD_url_text"
        />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="178dp"
        android:layout_below="@id/HD_url"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <Button
        android:id="@+id/select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_below="@id/datePicker"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/save_pic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_pic"
        android:layout_toLeftOf="@id/select_button"
        android:layout_below="@id/datePicker"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"/>


</RelativeLayout>